; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-cgroup.c_blkcg_get_weight.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-cgroup.c_blkcg_get_weight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blkio_cgroup = type { i32 }
%struct.blkio_policy_node = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@BLKIO_POLICY_PROP = common dso_local global i32 0, align 4
@BLKIO_PROP_weight_device = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @blkcg_get_weight(%struct.blkio_cgroup* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.blkio_cgroup*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.blkio_policy_node*, align 8
  store %struct.blkio_cgroup* %0, %struct.blkio_cgroup** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.blkio_cgroup*, %struct.blkio_cgroup** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @BLKIO_POLICY_PROP, align 4
  %10 = load i32, i32* @BLKIO_PROP_weight_device, align 4
  %11 = call %struct.blkio_policy_node* @blkio_policy_search_node(%struct.blkio_cgroup* %7, i32 %8, i32 %9, i32 %10)
  store %struct.blkio_policy_node* %11, %struct.blkio_policy_node** %6, align 8
  %12 = load %struct.blkio_policy_node*, %struct.blkio_policy_node** %6, align 8
  %13 = icmp ne %struct.blkio_policy_node* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load %struct.blkio_policy_node*, %struct.blkio_policy_node** %6, align 8
  %16 = getelementptr inbounds %struct.blkio_policy_node, %struct.blkio_policy_node* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %3, align 4
  br label %23

19:                                               ; preds = %2
  %20 = load %struct.blkio_cgroup*, %struct.blkio_cgroup** %4, align 8
  %21 = getelementptr inbounds %struct.blkio_cgroup, %struct.blkio_cgroup* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %19, %14
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local %struct.blkio_policy_node* @blkio_policy_search_node(%struct.blkio_cgroup*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
